# putioarr

./: .gitignore  .latest_release.txt  Cargo.toml  Dockerfile  LICENSE  README.md  Rocket.toml  docker-compose.yaml
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: release.yml
docker/: Dockerfile  build.sh  platform.sh
root/defaults/: config.toml
root/etc/s6-overlay/s6-rc.d/init-putioarr-config/: run  up
root/etc/s6-overlay/s6-rc.d/svc-putioarr/: down  finish  run
src/: appdata.rs  arr.rs  downloader.rs  handlers.rs  main.rs  oob.rs  putio.rs  routes.rs  state.rs  transmission.rs  utils.rs
src/download_system/: download.rs  mod.rs  orchestration.rs  transfer.rs
src/http/: handlers.rs  routes.rs
src/services/: arr.rs  mod.rs  putio.rs  transmission.rs
tools/: release.sh
