[package]
name = "putioarr"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-rt = "2.9.0"
actix-web = "4"
actix-web-httpauth = "0.8.0"
anyhow = "1.0"
async-channel = "1.9.0"
async-recursion = "1.0.5"
base64 = "0.21.4"
chrono = "0.4.30"
clap = { version = "4.4.3", features = ["derive"] }
confy = "0.5.1"
env_logger = "0.10.0"
file-owner = "0.1.2"
futures = "0.3.28"
itertools = "0.11.0"
log = "0.4.20"
reqwest = { version = "0.11", features = ["json", "multipart", "stream"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.32.0", features = ["fs"] }
