[package]
name = "putioarr"
description = "put.io to sonarr/radarr proxy"
authors = ["Wouter de Bie <wouter@evenflow.nl"]
repository = "https://github.com/wouterdebie/putioarr"
license = "MIT"
version = "0.4.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-rt = "2.9.0"
actix-web = "4"
actix-web-httpauth = "0.8.0"
anyhow = "1.0"
async-channel = "1.9.0"
async-recursion = "1.0.5"
base64 = "0.21.4"
chrono = "0.4.30"
clap = { version = "4.4.3", features = ["derive", "env"] }
colored = "2"
directories = "5.0"
env_logger = "0.10.0"
figment = { version = "0.10.10", features = ["toml"] }
file-owner = "0.1.2"
futures = "0.3.28"
lava_torrent = "0.11.1"
log = "0.4.20"
magnet-url = "2.0.0"
nix = "0.27.1"
reqwest = { version = "0.11", features = ["json", "multipart", "stream"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.32.0", features = ["fs"] }
urldecode = "0.1.1"

[dev-dependencies]
cargo-bump = "1.1.0"
